# social_bots

./: .gitignore  README.md  pyproject.toml
social_bots/: docker-compose.yml
social_bots/creds/: creds.yml
social_bots/discord_bot/: Dockerfile  api.py  requirements.txt
social_bots/secrets/: Dockerfile  api.py
social_bots/telegram_bot/: Dockerfile  bot.py  requirements.txt
